data/derived/comb/progs/unify/prog2170.ml.out
Characters 47-48:
  if explode w = listReverse w then true
                             ^
Error: This expression has type string but an expression was expected of type
         'a list
